GetServiceInfoById
